--- a/Reeeeal_Basic.html
+++ b/Reeeeal_Basic.html
@@ -7,9 +7,9 @@
   <body>
     <h1><b>Creative Technologies Program</b></h1>
 
-<h4><b>Address:</b>Campus Box 5750
-    <b>Phone:</b>(309) 438-2875
-    <b>Director:</b> Rose Marshack
+<h4><b>Address:</b>Campus Box 5750<br>
+    <b>Phone:</b>(309) 438-2875<br>
+    <b>Director:</b> Rose Marshack<br>
     <b>Degrees Offered:</b> B.A., B.S.</h4>
 
 <h2><b>Major in Creative Technologies</b></h2>
