--- a/Assignment_2/classes.html
+++ b/Assignment_2/classes.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>CTK Stuffs</title>
+    <title>CTK Stuffs - Classes</title>
   </head>
   <body>
     <p><h1><b>CTK Classes</b></h1></p>
