--- a/assignment10/Gallerypage.html
+++ b/assignment10/Gallerypage.html
@@ -3,8 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
-    <link href="Home_page.css" rel="stylesheet" type="text/css">
+    <title>Gallery</title>
+    <link href="Gallerypage.css" rel="stylesheet" type="text/css">
+   
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <header>
     <nav>
@@ -15,3 +20,89 @@
         </ul>
     </nav>
 </header>
+<body>
+    <div id="wrapper">
+    
+    <h1> Illistrations </h1>
+    <a href="stay spooky.png" data-fancybox="secondgallery" data-caption="Stay Spooky - A Halloween graphic tee design">
+        <img src="stay spooky.png" style="width: 340px;">
+    </a>
+    <a href="Sad Ghost.png" data-fancybox="secondgallery" data-caption="Saddest Little Baby In The Room - A Halloween graphic tee design (From the song Oh Klahoma by Jack Stauber)">
+        <img src="Sad Ghost.png" style="width: 340px;">
+    </a>
+    </a>
+    <a href="Rock Band 3.png" data-fancybox="secondgallery" data-caption="Rock Band - A graphic tee design">
+        <img src="Rock Band 3.png" style="width: 340px;">
+    </a>
+  
+    </div>
+
+    <script>
+        Fancybox.bind("[data-fancybox]", {});
+        </script>
+
+ <div id="wrapper2">
+    <h1>Photography Gallery</h1>
+    <a href="Clovers.jpg" data-fancybox="gallery" data-caption="Clover Forest">
+        <img src="Clovers.jpg" style="width: 200px;">
+      </a>
+      <a href="Flower and Leaf.jpg" data-fancybox="gallery" data-caption="Flower and Leaf">
+        <img src="Flower and Leaf.jpg" style="width: 200px;">
+      </a>
+      <a href="Flower against wall.jpg" data-fancybox="gallery" data-caption="Flower Against Wall">
+        <img src="Flower against wall.jpg" style="width: 200px;">
+      </a>
+      <a href="close up flower.jpg" data-fancybox="gallery" data-caption="Close Up Flower">
+          <img src="close up flower.jpg" style="width: 200px;">
+      </a>
+      <a href="CAT and Vape.jpg" data-fancybox="gallery" data-caption="Vape Break">
+          <img src="CAT and Vape.jpg" style="width: 200px;">
+      </a>
+      <a href="dandelion.jpg" data-fancybox="gallery" data-caption="Dandelion">
+          <img src="dandelion.jpg" style="width: 200px;">
+      </a>
+      <a href="bush branch stone.jpg" data-fancybox="gallery" data-caption="Bush Branch Stone">
+          <img src="bush branch stone.jpg" style="width: 200px;">
+      </a>
+      <a href="Grass.jpg" data-fancybox="gallery" data-caption="Brissle">
+          <img src="Grass.jpg" style="width: 200px;">
+      </a>
+      <a href="Grass and Acorn.jpg" data-fancybox="gallery" data-caption="Brissle and Acorn Cap">
+          <img src="Grass and Acorn.jpg" style="width: 200px;">
+      </a>
+      <a href="Shroomies.jpg" data-fancybox="gallery" data-caption="Orange Shroomies">
+          <img src="Shroomies.jpg" style="width: 200px;">
+      </a>
+      <a href="Shroomie on tree.jpg" data-fancybox="gallery" data-caption="Shroomie On Tree">
+          <img src="Shroomie on tree.jpg" style="width: 200px;">
+      </a>
+      <a href="Skyflower.jpg" data-fancybox="gallery" data-caption="Sky Flower">
+          <img src="Skyflower.jpg" style="width: 200px;">
+      </a>
+      <a href="pretzel aries.jpg" data-fancybox="gallery" data-caption="Aries Shapped Pretzel">
+          <img src="pretzel aries.jpg" style="width: 200px;">
+      </a>
+      <a href="shell.jpg" data-fancybox="gallery" data-caption="Shell">
+          <img src="shell.jpg" style="width: 200px;">
+      </a>
+      <a href="tooth.jpg" data-fancybox="gallery" data-caption="Shark Tooth">
+          <img src="tooth.jpg" style="width: 200px;">
+      </a>
+      <a href="string.jpg" data-fancybox="gallery" data-caption="String">
+          <img src="string.jpg" style="width: 200px;">
+      </a>
+      <a href="black shell.jpg" data-fancybox="gallery" data-caption="Speckled Shell">
+          <img src="black shell.jpg" style="width: 200px;">
+      </a>
+      <a href="pen.jpg" data-fancybox="gallery" data-caption="Blue Pen">
+          <img src="pen.jpg" style="width: 200px;">
+      </a>
+      <a href="acorn.jpg" data-fancybox="gallery" data-caption="Acorn">
+          <img src="acorn.jpg" style="width: 200px;">
+      </a>
+      </a>
+      <a href="acorn in shell.jpg" data-fancybox="gallery" data-caption="Acorn in Shell">
+          <img src="acorn in shell.jpg" style="width: 200px;">
+      </a>
+ </div>
+</body>
