--- a/assignment10/Homepage.html
+++ b/assignment10/Homepage.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <title>Home</title>
     <link href="Home_page.css" rel="stylesheet" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    
 </head>
 <header>
     <nav>
@@ -37,7 +41,7 @@
     </div>
 
     <div class="invisibox">
-        <p class="music">Good in Goodbye X Vicious</p>
+        <p class="music"> Vicious X Good in Goodbye</p>
         <div class="playbutton">
             <audio controls autobuffer autoplay >
                 <source src="Vicious X Good in Goodbye .m4a" type="audio/m4a">
