--- a/assignment10/Homepage.html
+++ b/assignment10/Homepage.html
@@ -42,21 +42,25 @@
 
     <div class="invisibox">
         <p class="music"> Vicious X Good in Goodbye</p>
-        <div class="playbutton">
-            
+            <img src="spiral.png" alt="gradient spiral" style= "width: 320px" class="playbutton"> 
+    </div>
         </div>
-        <div class="line"><audio controls autobuffer autoplay >
+        <div class="line"><audio controls autobuffer autoplay>
             <source src="Vicious-X-Good-in-Goodbye-.mp3" type="audio/mpeg">
           </audio></div>
     
     </div>  
     <div class="box3">
         <div class="mebox">
-            <p> About Me</p>
-            <p>Hello! I'm Aries, I am a 19 year old, Illinois based Illustrator, Sound designer and Video editor. I love filming editing and working with sound. </p>
+            <h2> About Me</h2>
+            <p>Hello! I'm Aries, I am a 19 year old, Illinois based Illustrator, Sound designer and Video editor. I love filming editing and working with sound.
+                One thing to know about me is that when given creative freedom I am a very comedic person, given the chance I love to impliment comedy in my work. When the world shut down during
+                the pandemic, I really started dabbling into the arts and fell in love with entertaining. One of the things I love about music, animation, and entertainment as a whole,
+                is that it allows you to escape reality and the stress everyday life can bring. A career goal of mine is to help create that escape for others. With everyday life, comes stress, but everyone
+                deserves to take a break every once in a while and escape to a world that brings them joy.</p>
         </div>
         <div class="mephoto">
-         <img src="sittin on da beach.png" alt="cowboy+bear" style= "width: 330px; vertical-align: middle;" class="photoshapper">
+         <img src="sittin on da beach.png" alt="cowboy+bear" style= "width: 400px; vertical-align: middle;" class="photoshapper">
         </div>
     </div>
  
