--- a/assignment10/Homepage.html
+++ b/assignment10/Homepage.html
@@ -45,7 +45,7 @@
             <img src="spiral.png" alt="gradient spiral" style= "width: 320px" class="playbutton"> 
     </div>
         </div>
-        <div class="line"><audio controls autobuffer autoplay>
+        <div class="line"><audio controls autobuffer>
             <source src="Vicious-X-Good-in-Goodbye-.mp3" type="audio/mpeg">
           </audio></div>
     
