--- a/assignment10/Resumepage.html
+++ b/assignment10/Resumepage.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     
 </head>
 <header>
@@ -17,6 +18,12 @@
             <li><a href="Gallerypage.html">Gallery</a></li>
             <li><a href="Resumepage.html">Resume</a></li>
         </ul>
+        
+  
+    <ul>
+        <li> <a href= "https://www.youtube.com/@ThatGarbageArtist8205" class="bi bi-youtube" ></a> </li> 
+        <li> <a href= "https://www.instagram.com/begay.dowitchcraft?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr" class="bi bi-instagram" ></a></li>
+    </ul>
     </nav>
 </header>
 
